Added index controller which list sensors, added in memory repository